<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2019 Google LLC

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

    https://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<restrictions xmlns:android="http://schemas.android.com/apk/res/android">

  <restriction
    android:key="adDomain"
    android:title="@string/ad_domain"
    android:description="@string/ad_domain_description"
    android:defaultValue=""
    android:restrictionType="string"/>

  <restriction
    android:key="username"
    android:title="@string/username"
    android:description="@string/username_description"
    android:defaultValue=""
    android:restrictionType="string"/>

  <restriction
    android:key="password"
    android:title="@string/password"
    android:description="@string/password_description"
    android:defaultValue=""
    android:restrictionType="string"/>

  <restriction
    android:key="adController"
    android:title="@string/service_principal"
    android:description="@string/service_principal_description"
    android:defaultValue=""
    android:restrictionType="string"/>

  <restriction
      android:key="sensitiveDebugData"
      android:title="@string/sensitive_debug_data"
      android:description="@string/sensitive_debug_data_description"
      android:defaultValue="false"
      android:restrictionType="bool"/>

</restrictions>
